--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ group 'com.arthurtaborda'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = "com.arthurtaborda.transactionmonitor.TransactionMonitor"
+
+
 
 sourceCompatibility = 1.8
 
